clusters/apps/base/auth-system/oauth2-proxy/middleware.forward-auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-auth
spec:
  forwardAuth:
    address: https://keycloak.${SECRET_DOMAIN}/oauth2
