clusters/apps/base/auth-system/oauth2-proxy/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy
  namespace: istio-system
spec:
  hosts:
    - 'auth.${SECRET_DOMAIN}'
  gateways:
    - istio-system/main
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: oauth2-proxy.auth-system.svc.cluster.local
